app/assets/stylesheets/local/rights_statements.scss
// A large rights statement, as on work show page, where the label is usually
// two lines via an internal "BR". Trying to mimic standard displays from
// rightstatements.org

.rights-statement.large {
  margin-top: $spacer;

  @include clearfix;

  .rights-statement-logo {
    width: 2.25rem;
    height: 2.25rem;
    margin-right: 0.5em;
    margin-top: 0.25rem;
  }

  // for rightsstatements.org style, we have a few words, and we make them
  // into a logo lockup. Not for creative-commons-org style.
  &.rights-statements-org .rights-statement-label {
    float: left;
    display: inline-block;
    font-size: 1.1875rem;
    line-height: 1.375rem;
    text-transform: uppercase;
    letter-spacing: $small-caps-letter-spacing;
    font-weight: $semi-bold-weight;
  }

  &.creative-commons-org  {
    line-height: $paragraph-line-height;

    .rights-statement-label {
      display: block;
      @extend .small;
      line-height: 1.4;

      margin-top: 0.25rem;
      a {
        display: inline;
      }
    }
  }
}


// The one-line rights statement, usually in a download menu, as on work show
// page and image viewer.

.rights-statement.dropdown-item {
  .rights-statement-label {
    vertical-align: middle;
  }
  .rights-statement-logo {
    width: 1em;
    height: 1em;
    vertical-align: middle;
  }
}

